only missing update review + delete review. Also you can post reviews without being logged in

--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,11 @@
     width: 150px;
 }
 
+.gifPreview {
+    height: 200px;
+    width: 200px;
+}
+
 .artImg {
     position: absolute;
     height: 480px;
