--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,101 @@
+@import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@1,300&display=swap');
+
+/* GENERAL STYLING + STRUCTURE */
+
+div {
+    border: 3px black solid;
+    margin: 3px;
+    /* padding: 3px; */
+}
+
 .App {
     text-align: center;
+    margin-left: 15vw;
+    margin-right: 15vw;
+    background-color: #f5f5f5;
 }
+
+
+/* Background supplied by SVG Backgrounds */
+
+#root {
+    background-color: #ffff00;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ff8000'/%3E%3Cstop offset='1' stop-color='%23ff8000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%2300ff19'/%3E%3Cstop offset='1' stop-color='%2300ff19' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%239900ff'/%3E%3Cstop offset='1' stop-color='%239900ff' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffff00'/%3E%3Cstop offset='1' stop-color='%23ffff00' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23FF0000'/%3E%3Cstop offset='1' stop-color='%23FF0000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%230CF'/%3E%3Cstop offset='1' stop-color='%230CF' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
+    z-index: -5;
+    margin: 0;
+    border: 0;
+}
+
+
+/* HOMEPAGE STYLING */
+
+.logo {
+    font-family: 'Newsreader', serif;
+    font-weight: bold;
+    font-size: 128pt;
+    color: #DCAE96
+}
+
+.tagline {
+    font-family: 'Newsreader', serif;
+    font-size: 24pt;
+    color: #DCAE96
+}
+
+.col {
+    display: flex;
+    justify-content: center;
+}
+
+.artPreview {
+    height: 400px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    border: 3px black solid;
+    border-radius: 5px;
+}
+
+.previewImage {
+    height: 150px;
+    width: 150px;
+    border-radius: 5px;
+}
+
+
+/* NAVBAR STYLING */
+
+.navbar {
+    border: 3px black solid;
+    margin: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.loggedIn {}
+
+.loggedOut {
+    display: flex;
+    flex-direction: row;
+}
+
+.loginForm {
+    display: flex;
+    flex-direction: row;
+}
+
+.inputs {}
+
+.formGroup {
+    display: flex;
+    flex-direction: row;
+}
+
+
+/* MY GALLERY STYLING */
 
 
 /*ANIMATION */
@@ -66,31 +161,15 @@
 }
 
 
-/* .coolImg {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 80%;
-    z-index: -1;
-} */
-
-
-/* img {
-    height: 150px;
-    width: 150px;
-} */
-
-.previewImage {
-    height: 150px;
-    width: 150px;
-}
+/* MODAL STYLING */
 
 .gifPreview {
     height: 200px;
     width: 200px;
 }
+
+
+/* ART FRAME STYLING */
 
 .artImg {
     position: absolute;
@@ -119,10 +198,4 @@
 
 .reviews {
     order: 2
-}
-
-div {
-    border: 3px black solid;
-    margin: 10px;
-    padding: 10px;
 }
