--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 /* GENERAL STYLING + STRUCTURE */
 
 div {
-    border: 3px black solid;
+    /* border: 3px black solid; */
     margin: 3px;
     /* padding: 3px; */
 }
@@ -19,10 +19,7 @@ div {
 /* Background supplied by SVG Backgrounds */
 
 #root {
-    background-color: #ffff00;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ff8000'/%3E%3Cstop offset='1' stop-color='%23ff8000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%2300ff19'/%3E%3Cstop offset='1' stop-color='%2300ff19' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%239900ff'/%3E%3Cstop offset='1' stop-color='%239900ff' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffff00'/%3E%3Cstop offset='1' stop-color='%23ffff00' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23FF0000'/%3E%3Cstop offset='1' stop-color='%23FF0000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%230CF'/%3E%3Cstop offset='1' stop-color='%230CF' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
-    background-attachment: fixed;
-    background-size: cover;
+    background-image: linear-gradient(to bottom right, red, yellow);
     z-index: -5;
     margin: 0;
     border: 0;
@@ -69,7 +66,7 @@ div {
 /* NAVBAR STYLING */
 
 .navbar {
-    border: 3px black solid;
+    /* border: 3px black solid; */
     margin: 0;
     padding-left: 10px;
     padding-right: 10px;
@@ -88,6 +85,10 @@ div {
 }
 
 .inputs {}
+
+.inputBox {
+    width: 200px;
+}
 
 .formGroup {
     display: flex;
@@ -188,6 +189,7 @@ div {
     height: 500px;
     width: 500px;
     order: 1;
+    z-index: 5;
 }
 
 .artWall {
