--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;900&display=swap');
 
 /* GENERAL STYLING + STRUCTURE */
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
 
 div {
     /* border: 3px black solid; */
@@ -12,14 +18,20 @@ div {
     text-align: center;
     margin-left: 15vw;
     margin-right: 15vw;
-    background-color: #f5f5f5;
+    background-color: white;
+}
+
+a {
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    color: black;
 }
 
 
 /* Background supplied by SVG Backgrounds */
 
 #root {
-    background-image: linear-gradient(to bottom right, red, yellow);
+    /* background-image: linear-gradient(to bottom right, red, yellow); */
     z-index: -5;
     margin: 0;
     border: 0;
@@ -29,16 +41,20 @@ div {
 /* HOMEPAGE STYLING */
 
 .logo {
-    font-family: 'Newsreader', serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: bold;
     font-size: 128pt;
-    color: #DCAE96
+    color: black;
 }
 
 .tagline {
-    font-family: 'Newsreader', serif;
-    font-size: 24pt;
-    color: #DCAE96
+    font-family: 'Poppins', sans-serif;
+    font-size: 18pt;
+    color: black;
+}
+
+.poweredBy {
+    font-size: 14pt;
 }
 
 .col {
