--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
 
 div {
     /* border: 3px black solid; */
-    margin: 3px;
+    /* margin: 3px; */
     /* padding: 3px; */
 }
 
@@ -19,12 +19,6 @@ div {
     margin-left: 15vw;
     margin-right: 15vw;
     background-color: white;
-}
-
-a {
-    font-family: 'Poppins', sans-serif;
-    text-decoration: none;
-    color: black;
 }
 
 
@@ -60,22 +54,40 @@ a {
 .col {
     display: flex;
     justify-content: center;
+    justify-content: center;
 }
 
 .artPreview {
-    height: 400px;
-    width: 300px;
+    height: 420px;
+    width: 350px;
+    padding: 48px;
+    margin: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    border: 3px black solid;
     border-radius: 5px;
+    background-image: url('./assets/frame.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 
 .previewImage {
     height: 150px;
     width: 150px;
     border-radius: 5px;
+}
+
+.artLink {
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    color: black;
+    font-size: 16pt;
+}
+
+.artistLink {
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    color: black;
 }
 
 
@@ -113,6 +125,16 @@ a {
 
 
 /* MY GALLERY STYLING */
+
+.galleryCol {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.updateArt {
+    border: 5px black solid;
+}
 
 
 /*ANIMATION */
