--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,10 @@ div {
     background-color: white;
 }
 
+.btn {
+    margin: 10px;
+}
+
 
 /* Background supplied by SVG Backgrounds */
 
@@ -72,8 +76,8 @@ div {
 }
 
 .previewImage {
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 200px;
     border-radius: 5px;
 }
 
@@ -134,6 +138,17 @@ div {
 
 .updateArt {
     border: 5px black solid;
+}
+
+
+/* ARTIST PROFILE STYLING */
+
+.galleryBanner {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 64pt;
+    color: black;
+    margin: 50px;
 }
 
 
@@ -221,19 +236,37 @@ div {
     padding: 10px;
 }
 
-.artFrame {
-    border: 10px black solid;
+#artFrame {
     position: relative;
     height: 500px;
     width: 500px;
-    order: 1;
     z-index: 5;
+}
+
+.artTitle {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 64pt;
+    color: black;
+    margin: 50px;
 }
 
 .artWall {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.wallPart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.review {
+    border: 2px black solid;
+    padding: 5px;
+    border-radius: 5px;
 }
 
 .reviews {
